h1. CHANGELOG

h3. 3.1.34 May 14, 2018

* add rails-signup-thankyou contributed application 

h3. 3.1.33 February 21, 2018

* remove 'rails_stripe_membership_saas' option from example applications (no longer supported)

h3. 3.1.32 February 9, 2018

* Bootstrap 4 was released Jan 18, 2018 so no need to specify '~> 4.0.0.alpha6'
* no need to warn about SimpleForm being incompatible with Rails 5.1

h3. 3.1.31 February 9, 2018

* for Rails 5.2 and newer, create 'config/secrets.yml' file whether or not the secrets preference is set
* use 'pg' gem version 0.18 for Rails 5.1.4 and older (fixes https://github.com/RailsApps/rails_apps_composer/issues/368)

h3. 3.1.30 January 19, 2018

* for Rails 5.2 and newer, create 'config/secrets.yml' file if the secrets preference is set

h3. 3.1.29 November 26, 2017

* factory_girl_rails gem is now named factory_bot_rails

h3. 3.1.28 November 20, 2017

* fix uninitialized constant error for Tempfile (thanks @shaoyangyu!)
* changed call to 'confirm!' to 'confirm' in recipes/init.rb to fix the Devise confirmable module (thanks @tomelam!)

h3. 3.1.27 May 17, 2017

* remove gem 'capybara' for Rails 5.1 (already included in Rails 5.1)
* remove gem 'selenium-webdriver' for Rails 5.1 (already included in Rails 5.1)
* update gem 'bootstrap' to 4.0.0.alpha6

h3. 3.1.26 May 15, 2017

* restore support for Rails 5.0 for learn-rails application

h3. 3.1.25 May 15, 2017

* add jQuery option via gem or yarn (because Rails 5.1 drops jQuery and Bootstrap needs it)
* remove 'minitest-rails-capybara' gem from learn-rails recipe (not needed for Rails 5.1)

h3. 3.1.24 May 7, 2017

* 'secrets.yml' file in Rails 5 contains string 'production:' twice

h3. 3.1.23 May 7, 2017

* SimpleForm is incompatible with Rails 5.1
* 'learn-rails' application no longer uses SimpleForm

h3. 3.1.22 April 27, 2017

* announce Kickstarter campaign

h3. 3.1.21 November 23, 2016

* accommodate Rails 5.0.1 (fixes https://github.com/RailsApps/rails-composer/issues/261)
