@@ -68,14 +68,18 @@ if prefs[:disable_turbolinks]
   stage_two do
     say_wizard "recipe stage two"
     gsub_file 'Gemfile', /gem 'turbolinks'\n/, ''
+    gsub_file 'Gemfile', /gem 'turbolinks', '~> 5'\n/, ''
     gsub_file 'app/assets/javascripts/application.js', "//= require turbolinks\n", ''
     case prefs[:templates]
       when 'erb'
         gsub_file 'app/views/layouts/application.html.erb', /, 'data-turbolinks-track' => true/, ''
+        gsub_file 'app/views/layouts/application.html.erb', /, 'data-turbolinks-track' => 'reload'/, ''
       when 'haml'
         gsub_file 'app/views/layouts/application.html.haml', /, 'data-turbolinks-track' => true/, ''
+        gsub_file 'app/views/layouts/application.html.haml', /, 'data-turbolinks-track' => 'reload'/, ''
       when 'slim'
         gsub_file 'app/views/layouts/application.html.slim', /, 'data-turbolinks-track' => true/, ''
+        gsub_file 'app/views/layouts/application.html.slim', /, 'data-turbolinks-track' => 'reload'/, ''
     end
   end
 end
