@@ -20,29 +20,20 @@ if prefer :apps4, 'rails-signup-thankyou'
   prefs[:local_env_file] = false
   prefs[:prod_webserver] = 'same'
   prefs[:pry] = false
-  prefs[:secrets] = ['mailchimp_list_id', 'mailchimp_api_key']
   prefs[:pages] = 'about+users'
   prefs[:templates] = 'erb'
   prefs[:tests] = 'none'
   prefs[:locale] = 'none'
   prefs[:analytics] = 'none'
   prefs[:rubocop] = false
-  prefs[:disable_turbolinks] = false
+  prefs[:disable_turbolinks] = true
   prefs[:rvmrc] = true
   prefs[:form_builder] = false
   prefs[:jquery] = 'gem'
 
-  # gems
-  add_gem 'gibbon'
-  add_gem 'sucker_punch'
-
   stage_three do
     say_wizard "recipe stage three"
     repo = 'https://raw.github.com/RailsApps/rails-signup-thankyou/master/'
-
-    # >-------------------------------[ Config ]---------------------------------<
-
-    copy_from_repo 'config/initializers/active_job.rb', :repo => repo
 
     # >-------------------------------[ Models ]--------------------------------<
 
@@ -54,10 +45,6 @@ if prefer :apps4, 'rails-signup-thankyou'
     copy_from_repo 'app/controllers/visitors_controller.rb', :repo => repo
     copy_from_repo 'app/controllers/products_controller.rb', :repo => repo
     copy_from_repo 'app/controllers/thank_you_controller.rb', :repo => repo
-
-    # >-------------------------------[ Jobs ]---------------------------------<
-
-    copy_from_repo 'app/jobs/mailing_list_signup_job.rb', :repo => repo
 
     # >-------------------------------[ Views ]--------------------------------<
 
