@@ -1,8 +1,13 @@
 h1. CHANGELOG
 
+h3. 3.1.35 May 16, 2018
+
+* option to remove Rails Turbolinks for Rails 5
+* improve rails-signup-thankyou contributed application (no TurboLinks, drop mailing list)
+
 h3. 3.1.34 May 14, 2018
 
-* add rails-signup-thankyou contributed application 
+* add rails-signup-thankyou contributed application
 
 h3. 3.1.33 February 21, 2018
 
